fix(hero.scss): Align center for lts container and update snap

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -33,6 +33,7 @@
   display: flex;
   position: relative;
   flex-direction: column;
+  align-items: center;
 
   & > p {
     margin-top: var(--space-08);
